# services/api-gateway/docs/swagger.json
@@ -10,7 +10,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/account/{id}": {
+        "/account/me": {
             "get": {
                 "security": [
                     {
@@ -26,16 +26,7 @@
                 "tags": [
                     "Account"
                 ],
-                "summary": "Get Account Details with accountID and userID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Account ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Get Account Details with user authentication",
                 "responses": {
                     "200": {
                         "description": "OK",
